# Aprendendo-FastAPI

./: README.md  banco.db  estrutura.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 8c2ccc66911b_adiconar_itens_no_pedido.py  989c28e517ae_initial_migration.py
aprendendo_fastapi/: auth_routes.py  dependencies.py  main.py  models.py  order_routes.py  schemas.py
